--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <div>
                 <h2>hey</h2>
             </div>
-            <div></div>
+            <div>
+                <h3>hi</h3>
+            </div>
             <div></div>
             <div></div>
             <div></div>
